criacao das activiteis dos 4 sensores e implementacao do sensor de acelerometro

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SensorGiroscopio"></activity>
+        <activity android:name=".SensorAcelerometro" />
+        <activity android:name=".SensorLuz" />
+        <activity android:name=".SensorProximidade" />
+        <activity android:name=".Menu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
